--- a/web/denuncia-user.html
+++ b/web/denuncia-user.html
@@ -143,6 +143,15 @@
                                     </span>
                                 </div>
                             </fieldset>
+                            <fieldset>
+                                <legend>Detalles o Descripci&oacute;n del Delito</legend>
+                                <div class="form-group ">
+                                    <label for="txtdesc" class="control-label col-xs-12 col-sm-1">Fecha</label>
+                                    <span class="col-xs-12 col-sm-11">
+                                        <textarea id="txtdesc" class="form-control" rows="3" name="descripcion" tabindex="11"></textarea>
+                                    </span>
+                                </div>
+                            </fieldset>
                             <input class="btn btn-primary col-sm-offset-9" name="clean" tabindex="11" value="Limpiar" type="reset">
                             <input class="btn btn-primary pull-right" name="submit" tabindex="12" value="Registrar" type="submit">
                         </form>
