--- a/web/denuncia.html
+++ b/web/denuncia.html
@@ -145,7 +145,7 @@
                             <fieldset>
                                 <legend>Detalles o Descripci&oacute;n del Delito</legend>
                                 <div class="form-group ">
-                                    <label for="txtdesc" class="control-label col-xs-12 col-sm-1">Fecha</label>
+                                    <label for="txtdesc" class="control-label col-xs-12 col-sm-1">Descripci&oacute;n</label>
                                     <span class="col-xs-12 col-sm-11">
                                         <textarea id="txtdesc" class="form-control" rows="3" name="descripcion" tabindex="11"></textarea>
                                     </span>
